objects/Order_Transaction_c__x.object
<CustomObject>
    <externalDataSource>HDMP_QA</externalDataSource>
    <externalName>Order_Transaction__c</externalName>
    <fields>
        <fullName>Adjustment_Date_Time_c__c</fullName>
        <externalDeveloperName>Adjustment_Date_Time__c</externalDeveloperName>
        <label>Adjustment Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Adjustment_Note_c__c</fullName>
        <externalDeveloperName>Adjustment_Note__c</externalDeveloperName>
        <label>Adjustment Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BT_Transaction_Details_c__c</fullName>
        <externalDeveloperName>BT_Transaction_Details__c</externalDeveloperName>
        <label>Payment Gateway Transaction</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer_To_Customer_Note_c__c</fullName>
        <externalDeveloperName>Dealer_To_Customer_Note__c</externalDeveloperName>
        <label>Dealer To Customer Note</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inbound_OrderItemDetail_c__c</fullName>
        <externalDeveloperName>Inbound_OrderItemDetail__c</externalDeveloperName>
        <label>Inbound Order Item Detail</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Adjustment_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Adjustment__c</externalDeveloperName>
        <label>Is Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Order Transaction No</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Fulfillment_c__c</fullName>
        <externalDeveloperName>Order_Fulfillment__c</externalDeveloperName>
        <label>Order Fulfillment</label>
        <length>18</length>
        <referenceTo>Order_Fulfillment_c__x</referenceTo>
        <relationshipName>Order_Transactions</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Order_Transaction_Status_c__c</fullName>
        <externalDeveloperName>Order_Transaction_Status__c</externalDeveloperName>
        <label>Order Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Transaction_Type_c__c</fullName>
        <externalDeveloperName>Order_Transaction_Type__c</externalDeveloperName>
        <label>Order Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Placed</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Resolved Payment</fullName>
                </value>
                <value>
                    <fullName>Order Picked Up</fullName>
                </value>
                <value>
                    <fullName>Order Installed</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Payment Settlement</fullName>
                </value>
                <value>
                    <fullName>Unavailable Refund</fullName>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
                <value>
                    <fullName>Braintree Reconciliation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_c__c</fullName>
        <externalDeveloperName>Order__c</externalDeveloperName>
        <label>Order</label>
        <length>18</length>
        <referenceTo>Order__x</referenceTo>
        <relationshipName>Order_Transactions</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Adjustment_Total_Amount_c__c</fullName>
        <externalDeveloperName>Post_Adjustment_Total_Amount__c</externalDeveloperName>
        <label>Post Adjustment Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Post_Adjustment_Total_Tax_c__c</fullName>
        <externalDeveloperName>Post_Adjustment_Total_Tax__c</externalDeveloperName>
        <label>Post Adjustment Total Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_Adjustment_Total_Amount_c__c</fullName>
        <externalDeveloperName>Pre_Adjustment_Total_Amount__c</externalDeveloperName>
        <label>Pre Adjustment Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalPost_Adjustment_Installation_Charge__c</fullName>
        <externalDeveloperName>TotalPost_Adjustment_Installation_Charge__c</externalDeveloperName>
        <label>TotalPost Adjustment Installation Charge</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Post_Adjustment_Core_Charge_Amo__c</fullName>
        <externalDeveloperName>Total_Post_Adjustment_Core_Charge_Amount__c</externalDeveloperName>
        <label>Total Post Adjustment Core Charge Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Post_Adjustment_Core_Charge_Qty__c</fullName>
        <externalDeveloperName>Total_Post_Adjustment_Core_Charge_Qty__c</externalDeveloperName>
        <label>Total Post Adjustment Core Charge Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Post_Adjustment_Core_Charge_Tax__c</fullName>
        <externalDeveloperName>Total_Post_Adjustment_Core_Charge_Tax__c</externalDeveloperName>
        <label>Total Post Adjustment Core Charge Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Post_Adjustment_Extended_Price_c__c</fullName>
        <externalDeveloperName>Total_Post_Adjustment_Extended_Price__c</externalDeveloperName>
        <label>Total Post Adjustment Extended Price</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Post_Adjustment_Product_Tax_c__c</fullName>
        <externalDeveloperName>Total_Post_Adjustment_Product_Tax__c</externalDeveloperName>
        <label>Total Post Adjustment Product Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Post_Adjustment_Quantity_c__c</fullName>
        <externalDeveloperName>Total_Post_Adjustment_Quantity__c</externalDeveloperName>
        <label>Total Post Adjustment Quantity</label>
        <precision>5</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Post_Adjustment_Shiping_Charge_c__c</fullName>
        <externalDeveloperName>Total_Post_Adjustment_Shiping_Charge__c</externalDeveloperName>
        <label>Total Post Adjustment Shiping Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Post_adjustment_Installation_Tax_c__c</fullName>
        <externalDeveloperName>Total_Post_adjustment_Installation_Tax__c</externalDeveloperName>
        <label>Total Post adjustment Installation Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Post_adjustment_Shipping_Tax_c__c</fullName>
        <externalDeveloperName>Total_Post_adjustment_Shipping_Tax__c</externalDeveloperName>
        <label>Total Post adjustment Shipping Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjusmtment_Quantity_c__c</fullName>
        <externalDeveloperName>Total_Pre_Adjusmtment_Quantity__c</externalDeveloperName>
        <label>Total Pre Adjusmtment Quantity</label>
        <precision>5</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjustment_Core_Charge_Amou__c</fullName>
        <externalDeveloperName>Total_Pre_Adjustment_Core_Charge_Amount__c</externalDeveloperName>
        <label>Total Pre Adjustment Core Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjustment_Core_Charge_Qty__c</fullName>
        <externalDeveloperName>Total_Pre_Adjustment_Core_Charge_Qty__c</externalDeveloperName>
        <label>Total Pre Adjustment Core Charge Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjustment_Core_Charge_Tax__c</fullName>
        <externalDeveloperName>Total_Pre_Adjustment_Core_Charge_Tax__c</externalDeveloperName>
        <label>Total Pre Adjustment Core Charge Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjustment_Extended_Price_c__c</fullName>
        <externalDeveloperName>Total_Pre_Adjustment_Extended_Price__c</externalDeveloperName>
        <label>Total Pre Adjustment Extended Price</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjustment_Installation_Charge__c</fullName>
        <externalDeveloperName>Total_Pre_Adjustment_Installation_Charge__c</externalDeveloperName>
        <label>Total Pre Adjustment Installation Charge</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjustment_Installation_Tax_c__c</fullName>
        <externalDeveloperName>Total_Pre_Adjustment_Installation_Tax__c</externalDeveloperName>
        <label>Total Pre Adjustment Installation Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjustment_Product_Tax_c__c</fullName>
        <externalDeveloperName>Total_Pre_Adjustment_Product_Tax__c</externalDeveloperName>
        <label>Total Pre Adjustment Product Tax</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjustment_Shiping_Charge_c__c</fullName>
        <externalDeveloperName>Total_Pre_Adjustment_Shiping_Charge__c</externalDeveloperName>
        <label>Total Pre Adjustment Shiping Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pre_Adjustment_Shipping_Tax_c__c</fullName>
        <externalDeveloperName>Total_Pre_Adjustment_Shipping_Tax__c</externalDeveloperName>
        <label>Total Pre Adjustment Shipping Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Restocking_Fee_Tax_c__c</fullName>
        <externalDeveloperName>Total_Restocking_Fee_Tax__c</externalDeveloperName>
        <label>Total Restocking Fee Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Restocking_Fee_c__c</fullName>
        <externalDeveloperName>Total_Restocking_Fee__c</externalDeveloperName>
        <label>Total Restocking Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Order Transaction_Ext</label>
    <pluralLabel>Order Transactions_Ext</pluralLabel>
</CustomObject>